[tool.poetry]
name = "steamtools"
version = "0.1.0"
description = "A collection of TUI tools for accessing Steam data."
authors = ["Nathaniel Struselis <Nathaniel.Struselis@hotmail.co.uk>", "Dominic Mason <dominicmason555@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
bandit = "^1.7.5"
pylint = "^2.17.5"
pyright = "^1.1.327"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
