[tool.poetry]
name = "steamtools"
version = "0.1.0"
description = "A collection of TUI tools for accessing Steam data."
authors = ["Nathaniel Struselis <Nathaniel.Struselis@hotmail.co.uk>", "Dominic Mason <dominicmason555@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
bandit = "^1.7.5"
pylint = "^3.0.1"
pyright = "^1.1.332"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
